WIP net configs aio
With that config, I have haproxy frontend/backend assignments
logic fixed. Though there is wrong keepalived config (it binds
admin VIP to br-ctlplane, while it should be br-ex)

Signed-off-by: Bogdan Dobrelya <bogdando@mail.ru>

--- a/playbooks/oooq-libvirt-under-openshift.yaml
+++ b/playbooks/oooq-libvirt-under-openshift.yaml
@@ -55,7 +55,11 @@
       become: true
     # FIXME use custom undercloud_ip different to the one
     # generated with libivrt setup inventory tasks
-    - name: override undercloud_ip hostvars
+    - name: use provisioned undercloud_ip hostvar as external IP
+      set_fact:
+        undercloud_external_ip: "{{ undercloud_ip }}"
+        cacheable: true
+    - name: override undercloud_ip hostvar as we want its internal IP
       set_fact:
         undercloud_ip: "{{ undercloud_local_ip }}"
         cacheable: true
