--- a/tht/roles/UndercloudLight.yaml
+++ b/tht/roles/UndercloudLight.yaml
@@ -29,7 +29,8 @@
     - OS::TripleO::Services::NeutronCorePlugin
     - OS::TripleO::Services::NeutronDhcpAgent
     - OS::TripleO::Services::NeutronServer
-    - OS::TripleO::Services::RabbitMQ
+    - OS::TripleO::Services::OsloMessagingRpc
+    - OS::TripleO::Services::OsloMessagingNotify
     - OS::TripleO::Services::SwiftProxy
     - OS::TripleO::Services::SwiftRingBuilder
     - OS::TripleO::Services::SwiftStorage
