--- a/playbooks/oooq-libvirt-under-openshift.yaml
+++ b/playbooks/oooq-libvirt-under-openshift.yaml
@@ -55,7 +55,7 @@
     - name: hack in custom all-in-one role data
       command: >-
         cp -f
-        /home/stack/tht/roles/UndercloudAIOOpenshift.yaml
+        /home/{{ undercloud_user }}/tht/roles/UndercloudAIOOpenshift.yaml
         /usr/share/openstack-tripleo-heat-templates/roles_data_undercloud.yaml
       become: true
     # FIXME use custom undercloud_ip different to the one
