--- a/tht/config/general_config/featureset127.yml
+++ b/tht/config/general_config/featureset127.yml
@@ -1,11 +1,9 @@
 # Undercloud public TLS all-in-one BM(maybe) and VM-libvirt scenario to host openshift VMs.
 # Must be applied top-scope via -e@.
-# Based on fs027
-# NOTE: internal TLS requires some config/general_config/deprecated/ipa.yml oooq vars and
-# novajoin added in tht/role files.
-# Assumes eth0 is libvirt brext or phys ext-net. And eth1 is internal ctlplane (phys/brovc)
-# Libvirt-provision only related network configs
-# TODO rework Undercloud* as Standalone*
+# Based on fs027 quickstart for containerized openstack undercloud deploy --use-heat
+# NOTE: internal TLS will require some config/general_config/deprecated/ipa.yml oooq vars set
+# and novajoin added in tht/role files.
+# For libvirt, it configures eth0 as libvirt brext, and eth1 as brovc (ctlplane)
 networks:
   - name: external
     bridge: brext
@@ -42,7 +40,6 @@ undercloud_enable_telemetry: false
 undercloud_enable_zaqar: true
 undercloud_enable_mistral: true
 undercloud_install_cli_options: " --use-heat"
-# The path is used for j2 templates processing and net configs to be picked up
 undercloud_undercloud_output_dir: /home/stack
 # NOTE: not used yet, only needed for internal TLS (undercloud_custom_env_files)
 # {{overcloud_templates_path}}/environments/services/novajoin.yaml,
@@ -53,8 +50,8 @@ undercloud_custom_env_files: >-
  {{overcloud_templates_path}}/environments/services/undercloud-cinder.yaml,
  {{overcloud_templates_path}}/environments/disable-telemetry.yaml,
  {{working_dir}}/undercloud-parameter-defaults.yaml
-# FIXME only needed for prep containers script, w/o undercloud_custom_env_files
-# supported in it yet
+# FIXME: rework undercloud_extra_services_args via undercloud_custom_env_files,\
+# see https://review.openstack.org/#/c/563636
 # NOTE: not used yet, only needed for internal TLS
 # -e {{overcloud_templates_path}}/environments/services/novajoin.yaml
 undercloud_extra_services_args: >-
@@ -63,7 +60,7 @@ undercloud_extra_services_args: >-
 undercloud_install_script: undercloud-install.sh.j2
 undercloud_docker_registry_host: docker.io
 undercloud_docker_registry_namespace: tripleomaster
-# FIXME There is no current tag available?
+# FIXME: is the current tag available yet for container images?
 undercloud_docker_image_tag: current-tripleo
 network_isolation: false
 enable_pacemaker: false
@@ -80,7 +77,7 @@ step_root_device_hints: false
 step_introspect: false
 undercloud_generate_service_certificate: true
 ssl_overcloud: false
-# NOTE: those need to be enabled for internal TLS
+# NOTE: those 3 need to be enabled for internal TLS
 prepare_novajoin: false
 enable_tls_everywhere: false
 undercloud_enable_novajoin: false
@@ -94,31 +91,31 @@ undercloud_rpm_dependencies: "python-tripleoclient*"
 # eth1 - for br-ctlplane and admin VIP and local_ip
 # internal_api is replaced by ctlplane
 undercloud_network_cidr: 192.168.25.0/24
-# To be added into br-ctlplane
 undercloud_local_interface: "{{ local_int }}"
 undercloud_network_gateway: "{{ undercloud_network_cidr|nthhost(1) }}"
-undercloud_local_ip: "{{ undercloud_network_cidr|nthhost(53) }}/{{ undercloud_network_cidr|ipaddr('prefix') }}"
-local_docker_registry_host: "{{ undercloud_network_cidr|nthhost(53) }}"
+undercloud_local_ip: "{{ undercloud_network_cidr|nthhost(253) }}/{{ undercloud_network_cidr|ipaddr('prefix') }}"
+local_docker_registry_host: "{{ undercloud_network_cidr|nthhost(253) }}"
 undercloud_external_network_cidr: 192.168.23.0/24
 undercloud_external_network_gateway: "{{ undercloud_external_network_cidr|nthhost(1) }}"
-# Assumes the external dhcp range ends on .50
-undercloud_undercloud_public_host: "{{ undercloud_external_network_cidr|nthhost(51) }}"
-undercloud_undercloud_admin_host: "{{ undercloud_network_cidr|nthhost(52) }}"
+undercloud_undercloud_public_host: "{{ undercloud_external_network_cidr|nthhost(251) }}"
+undercloud_undercloud_admin_host: "{{ undercloud_network_cidr|nthhost(252) }}"
 # Not really used here as all-in-one does not include Ironic (for now)
 undercloud_inspection_iprange: "{{ undercloud_external_network_cidr|nthhost(70) }},{{ undercloud_external_network_cidr|nthhost(79) }}"
 undercloud_dhcp_start: "{{ undercloud_network_cidr|nthhost(60) }}"
 undercloud_dhcp_end: "{{ undercloud_network_cidr|nthhost(69) }}"
 undercloud_undercloud_nameservers:
   - 208.67.222.220
+# FIXME: should it be undercloud_external_network_cidr? (seems not used anyway)
 undercloud_masquerade_network: "{{ undercloud_network_cidr }}"
+# TODO: rework tht Undercloud* as Standalone* for AIO deployments
 undercloud_resource_registry_args:
   "OS::TripleO::Undercloud::Net::SoftwareConfig": "{{ overcloud_templates_path }}/net-config-undercloud.yaml"
-  # An external IP pre-provisioned with libvirt or pre-configured for BM host
-  #"OS::TripleO::Undercloud::Ports::ExternalPort": "{{ undercloud_undercloud_output_dir }}/templates/network/ports/external_from_pool.yaml"
+  # needs https://review.openstack.org/#/c/565233/
+  "OS::TripleO::Network::Ports::ExternalVipPort": "{{ undercloud_undercloud_output_dir }}/tripleo-heat-installer-templates/network/ports/external_from_pool.yaml"
   # ^-- Uses UndercloudIPs parameter
-  "OS::TripleO::Network::Ports::ExternalVipPort": "{{ undercloud_undercloud_output_dir }}/templates/network/ports/external_from_pool.yaml"
   "OS::TripleO::Network::Ports::ControlPlaneVipPort": "{{ overcloud_templates_path }}/deployed-server/deployed-neutron-port.yaml"
   "OS::TripleO::Network::Ports::RedisVipPort": "{{ overcloud_templates_path }}/network/ports/noop.yaml"
+# TODO: rework UndercloudNetConfigOverride via net_config_override, see https://review.openstack.org/#/c/563636/
 undercloud_network_environment_args:
   PublicVirtualInterface: 'br-ex'
   ControlVirtualInterface: 'br-ctlplane'
@@ -131,8 +128,9 @@ undercloud_network_environment_args:
           - type: interface
             name: "{{public_int}}"
             primary: "true"
-            # NOTE: use your public interface MTU and external/libvirt DNS servers
-            mtu: 1500
+            # NOTE: use your values for MTU and external/libvirt DNS servers
+            # mtu must be a hardcode to be properly to_json'ed as integers, see https://github.com/ansible/ansible/issues/17992
+            mtu: 1450
             dns_servers: "{{ undercloud_undercloud_nameservers }}"
         addresses:
           # this one should be configured by keepalived
@@ -145,7 +143,7 @@ undercloud_network_environment_args:
             next_hop: "{{ undercloud_external_network_gateway }}"
           - ip_netmask: "0.0.0.0/0"
             next_hop: "{{ undercloud_external_network_gateway }}"
-        mtu: 1500
+        mtu: 1450
       - type: ovs_bridge
         name: br-ctlplane
         ovs_extra: [ "br-set-external-id br-ctlplane bridge-id br-ctlplane" ]
@@ -153,7 +151,7 @@ undercloud_network_environment_args:
           - type: interface
             name: "{{ local_int }}"
             primary: "true"
-            mtu: 1500
+            mtu: 1450
             dns_servers: "{{ undercloud_undercloud_nameservers }}"
         addresses:
           # this one should be configured by keepalived
@@ -164,13 +162,10 @@ undercloud_network_environment_args:
             next_hop: "{{ undercloud_network_gateway }}"
           - ip_netmask: "{{ undercloud_network_cidr }}"
             next_hop: "{{ undercloud_network_gateway }}"
-        mtu: 1500
-  # NOTE: pre-provisioned IPs
-  # We set cached facts for undercloud_*_ip in the calling playbook
+        mtu: 1450
   UndercloudIPs:
     external:
       - "{{ undercloud_undercloud_public_host }}"
-      #- "{{ hostvars['undercloud'].undercloud_external_ip }}"
   # We only want ctlplane and External networks for simplicity, but let's
   # do overrides for future cases
   ServiceNetMap:
@@ -182,12 +177,12 @@ undercloud_network_environment_args:
     StorageMgmtNetwork: ctlplane
     ExternalNetwork: external
     TenantNetwork: external
-  # FIXME?: VIPs to be created by HAProxy/pcmk, when applicable
+  # Not sure, if these are even used as I have a net config override defined?..
   PublicVirtualFixedIPs: [{'ip_address':"{{undercloud_undercloud_public_host}}" }]
   ControlFixedIPs: [{'ip_address':"{{ undercloud_undercloud_admin_host }}"}]
   ControlPlaneDefaultRoute: "{{ undercloud_network_gateway }}"
   ControlPlaneSubnetCidr: "{{ undercloud_network_cidr|ipaddr('prefix') }}"
-  # Static routes and alloc pools
+  # FIXME: External/Tenant pools seem ignored
   ExternalAllocationPools: >
     [{'start': '{{ undercloud_external_network_cidr|nthhost(128) }}',
     'end': '{{ undercloud_external_network_cidr|nthhost(150) }}'}]
@@ -199,19 +194,9 @@ undercloud_network_environment_args:
     'end': '{{ undercloud_external_network_cidr|nthhost(99) }}'}]
   TenantInterfaceDefaultRoute: "{{ undercloud_external_network_gateway }}"
   TenantNetCidr: "{{ undercloud_external_network_cidr|ipaddr('prefix') }}"
-  # More data
-  EC2MetadataIp: "{{ undercloud_network_cidr|nthhost(53) }}"
+  # More data similar to environments/undercloud.yaml adapted for AIO
+  EC2MetadataIp: "{{ undercloud_network_cidr|nthhost(253) }}"
   DnsServers: "{{ undercloud_undercloud_nameservers }}"
-  ## This only works with net-config-undercloud.yaml?
-  #ControlPlaneStaticRoutes:
-  #  - ip_netmask: 169.254.169.254/32
-  #    next_hop: "{{ undercloud_network_gateway }}"
-  #  - ip_netmask: "{{ undercloud_network_cidr }}"
-  #    next_hop: "{{ undercloud_network_gateway }}"
-  #  - ip_netmask: "{{ undercloud_external_network_cidr }}"
-  #    next_hop: "{{ undercloud_external_network_gateway }}"
-  #  - ip_netmask: 0.0.0.0/0
-  #    next_hop: "{{ undercloud_external_network_gateway }}"
   UndercloudCtlplaneSubnets:
     ctlplane-subnet:
       NetworkCidr: "{{ undercloud_network_cidr }}"
@@ -220,7 +205,6 @@ undercloud_network_environment_args:
       DhcpRangeEnd: "{{ undercloud_network_cidr|nthhost(109) }}"
   UndercloudCtlplaneLocalSubnet: 'ctlplane-subnet'
   UndercloudEnableRoutedNetworks: false
-  # It should match the undercloud_local_interface value
   Debug: false
   DockerDebug: false
   DockerPuppetDebug: false
@@ -230,7 +214,6 @@ undercloud_network_environment_args:
   HeatCorsAllowedOrigin: '*'
   HeatMaxJsonBodySize: 2097152
   HeatMaxResourcesPerStack: -1
-  # To be added into br-ex
   HypervisorNeutronPublicInterface: "{{ public_int }}"
   KernelIpForward: 1
   KeystoneCorsAllowedOrigin: '*'
@@ -241,8 +224,6 @@ undercloud_network_environment_args:
   NeutronAgentExtensions: 'qos'
   NeutronBridgeMappings: 'floating:br-ex,ctlplane:br-ctlplane'
   NeutronDhcpAgentsPerNetwork: 2
-  # NOTE: this comes from undercloud.conf's overcloud_domain_name but is used
-  # as --local-domain for undercloud, so prolly should be a 'localdomain'?
   NeutronDnsDomain: 'localdomain'
   NeutronExternalNetworkBridge: "''"
   NeutronFirewallDriver: ''
