--- a/tht/environments/all-in-one-manila.yaml
+++ b/tht/environments/all-in-one-manila.yaml
@@ -16,7 +16,7 @@ parameter_defaults:
     #- OS::TripleO::Services::MistralEventEngine
     #- OS::TripleO::Services::NovaIronic
     #- OS::TripleO::Services::Tuned
-    #- OS::TripleO::Services::UndercloudCeilometerAgentIpmi
+    #- OS::TripleO::Services::CeilometerAgentIpmi
     - OS::TripleO::Services::Apache
     #- OS::TripleO::Services::ComputeCeilometerAgent
     - OS::TripleO::Services::ContainersLogrotateCrond
@@ -57,17 +57,17 @@ parameter_defaults:
     - OS::TripleO::Services::SwiftProxy
     - OS::TripleO::Services::SwiftRingBuilder
     - OS::TripleO::Services::SwiftStorage
-    #- OS::TripleO::Services::UndercloudAodhApi
-    #- OS::TripleO::Services::UndercloudAodhEvaluator
-    #- OS::TripleO::Services::UndercloudAodhListener
-    #- OS::TripleO::Services::UndercloudAodhNotifier
-    #- OS::TripleO::Services::UndercloudCeilometerAgentCentral
-    #- OS::TripleO::Services::UndercloudCeilometerAgentNotification
-    - OS::TripleO::Services::UndercloudCinderApi
-    - OS::TripleO::Services::UndercloudCinderScheduler
-    - OS::TripleO::Services::UndercloudCinderVolume
-    #- OS::TripleO::Services::UndercloudGnocchiApi
-    #- OS::TripleO::Services::UndercloudGnocchiMetricd
-    #- OS::TripleO::Services::UndercloudGnocchiStatsd
-    #- OS::TripleO::Services::UndercloudPankoApi
+    #- OS::TripleO::Services::AodhApi
+    #- OS::TripleO::Services::AodhEvaluator
+    #- OS::TripleO::Services::AodhListener
+    #- OS::TripleO::Services::AodhNotifier
+    #- OS::TripleO::Services::CeilometerAgentCentral
+    #- OS::TripleO::Services::CeilometerAgentNotification
+    - OS::TripleO::Services::CinderApi
+    - OS::TripleO::Services::CinderScheduler
+    - OS::TripleO::Services::CinderVolume
+    #- OS::TripleO::Services::GnocchiApi
+    #- OS::TripleO::Services::GnocchiMetricd
+    #- OS::TripleO::Services::GnocchiStatsd
+    #- OS::TripleO::Services::PankoApi
     - OS::TripleO::Services::Zaqar
